--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -52,7 +52,7 @@ body {background:#f1f4fb url(../img/body_bg.gif)}
 /* Header  */
 
 #header{
-	background-image: linear-gradient(-225deg, #231557 0%, #44107A 29%, #FF1361 67%, #FFF800 100%);	
+	background-image: linear-gradient(45deg, #a7a6cb 0%, #8989ba 52%, #8989ba 100%);
 	padding: 10px 0 10px 0px;
 }
 #header.sub {
