--- a/refer-javascript/style.css
+++ b/refer-javascript/style.css
@@ -204,6 +204,32 @@ a {
     box-shadow: inset 0 -100px 0 #304ffe;
     color: #fff;
 }
+/* 쌤 */
+.result h3 a {
+    font-size: 16px;
+    font-weight: normal;
+    /* padding: 10px 15px; */
+    background-color: #f1f1f1;
+    display: inline-block;
+    border-radius: 4px;
+    color: #000;
+    margin-top: 5px;
+}
+.result div {
+    background: #272822;
+    color: #fff;
+    padding: 15px 20px;
+    border-radius: 0 4px 4px 4px;
+    display: none;
+}
+.result.show div {
+    display: block;
+}
+.result div span {
+    display: block;
+}
+
+/* 내가 */
 .sample .result-box {}
 .sample .result-box h3 {
     font-size: 15px;
