--- a/refer-javascript/style.css
+++ b/refer-javascript/style.css
@@ -58,7 +58,7 @@ a {
 #contents {
     border: 8px solid #50b5f9;
     border-radius: 12px;
-    padding: 5% 2%;
+    padding: 2%;
     height: 100%;
     justify-content: center;
     flex-direction: column;
