--- a/site/css/test01style.css
+++ b/site/css/test01style.css
@@ -20,7 +20,7 @@ body {
 }
 .header .header-wrap {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 .header .header-wrap .logo {
     display: flex;
@@ -262,6 +262,7 @@ body {
 .cont2-container {
     width: 100%;
     background: #222;
+    margin: 0 auto;
 }
 .cont2 {
     color: #fff;
@@ -271,28 +272,106 @@ body {
     justify-content: space-between;
     margin-bottom: 20px;
 }
-.cont2 .cont2-title {
+.cont2-card .card-1 {}
+.cont2-card .card-1 h2 {
+    font-size: 60px;
+    color: #6d8bff;
+    font-weight: 800;
     margin-bottom: 50px;
 }
-.cont2 > div:nth-child(2) {
-    height: 570px;
-    border: 1px solid #000;
-    background: #333;
-    display: block;
+.cont2-card .card-2 {
+    background: #000;
     border-radius: 20px;
-    mh
+    padding: 20px;
 }
-.cont2 > div:nth-child(2) > div {
-    padding: 20px 0 0 20px;
+.cont2-card .card-2 img {
+    height: 593px;
+    margin-left: 40px;
 }
-.cont2 > div:nth-child(2) > div em {
-    font-size: 12px;
-    font-weight: 400;
-    margin-bottom: 10px;
-}
-.cont2 > div:nth-child(2) p {
+.cont2-card .card-3 {
+    background: #000;
+    border-radius: 20px;
+    padding: 20px;
     margin-bottom: 50px;
 }
-.cont2 > div:nth-child(2) img {
-    width: 580px;
+.cont2-card .card-3 p {
+    margin-bottom: 50px;
+}
+.cont2-card .card-3 img {
+    height: 294px;
+    margin-left: 60px;
+}
+.cont2-card .card-4 {
+    background: #000;
+    border-radius: 20px;
+    padding: 20px;
+}
+.cont2-card .card-4 p {
+    margin-bottom: 74px;
+}
+.cont2-card .card-4 img {
+    height: 294px;
+    margin-left: 150px;
+}
+.cont3 {
+    color:#5cf0c6;
+}
+.cont3 .cont3-1 h2 {
+    font-size: 70px;
+    font-weight: 800;
+    text-align: center;
+    margin-bottom: 40px;
+    margin-top: 100px;
+}
+.cont3 .cont3-2 {
+    height: 466px;
+    display: grid;
+    grid-template-columns: repeat(2, 580px);
+    justify-content: space-between;
+    margin-bottom: 40px;
+    position: relative;
+}
+.cont3 .cont3-2 .card-4 {
+    color: #fff;
+    background: #53C99D;
+    border-radius: 20px;
+    padding: 40px 0 0 40px;
+}
+.cont3 .cont3-2 .card-4 img {
+    width: 496px;
+    height: 205px;
+    position: absolute;
+    right: 51.6%;
+    bottom: 0;
+}
+.cont3 .cont3-2 .card-5 {
+    color: #fff;
+    background: #5276F6;
+    border-radius: 20px;
+    padding: 40px 0 0 40px;
+}
+.cont3 .cont3-2 .card-5 img {
+    width: 496px;
+    height: 265px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+.cont3 .cont3-3 {
+    margin-bottom: 50px;
+    position: relative;
+}
+.cont3 .cont3-3 .card-6 {
+    height: 328px;
+    color: #fff;
+    background: #534AB7;
+    border-radius: 20px;
+    padding: 40px 0 0 40px;
+}
+.cont3 .cont3-3 .card-6 img {
+    width: 609px;
+    height: 237px;
+    position: absolute;
+    right: 0;
+    bottom: -7%;
 }
