--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -515,7 +515,7 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
             li {
                 a {
                     font-size: 12px;
-                    width: 65px;
+                    width: 60px;
                     height: 30px;
                     line-height: 2.5;
                 }
@@ -550,7 +550,8 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
         padding-bottom: 10px;
         overflow: hidden;
         .view-cont {
-            height: 60vh;
+            height: 55vh;
+            overflow-y: scroll;
         }
         .view-title {
             li {
