--- a/refer-effect/assets/css/style.css
+++ b/refer-effect/assets/css/style.css
@@ -41,6 +41,69 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "S-CoreDream";
+  font-weight: 100;
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-1Thin.woff") format("woff");
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "S-CoreDream";
+  font-weight: 200;
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-2ExtraLight.woff") format("woff");
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "S-CoreDream";
+  font-weight: 300;
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff") format("woff");
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "S-CoreDream";
+  font-weight: 400;
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-4Regular.woff") format("woff");
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "S-CoreDream";
+  font-weight: 500;
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-5Medium.woff") format("woff");
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "S-CoreDream";
+  font-weight: 600;
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-6Bold.woff") format("woff");
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "S-CoreDream";
+  font-weight: 700;
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-7ExtraBold.woff") format("woff");
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "S-CoreDream";
+  font-weight: 800;
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-8Heavy.woff") format("woff");
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "S-CoreDream";
+  font-weight: 900;
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-9Black.woff") format("woff");
+  font-style: normal;
+}
+
 /* 여백 초기화 */
 body,
 div,
@@ -327,11 +390,16 @@ a {
 
 .info h1 {
   font-weight: 300;
-  font-size: 18px;
+  font-size: 20px;
   line-height: 1.6;
   border-bottom: 1px dashed #fff;
   display: inline-block;
   margin-bottom: 10px;
+}
+
+.info h1 a {
+  text-decoration: none;
+  color: #fff;
 }
 
 .info p {
@@ -350,12 +418,13 @@ a {
   color: #fff;
   border: 1px dashed #fff;
   border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  line-height: 20px;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
   text-align: center;
-  font-size: 12px;
-  margin-bottom: 5px;
+  font-size: 14px;
+  margin-bottom: 10px;
+  margin-left: 4px;
 }
 
 .info li.active a {
@@ -366,7 +435,7 @@ a {
 .info button {
   background: transparent;
   border: 1px solid #fff;
-  padding: 5px 20px;
+  padding: 4px 20px 5px;
   color: #fff;
   border-radius: 50px;
   -webkit-box-shadow: 0 0 0 #fff inset;
@@ -374,6 +443,8 @@ a {
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
   cursor: pointer;
+  width: 100px;
+  height: 40px;
 }
 
 .info button:hover {
@@ -382,33 +453,13 @@ a {
   color: #000;
 }
 
-.btn-wrap {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  display: none;
-}
-
-.btn-wrap button {
-  border: 1px solid #fff;
-  padding: 5px 10px;
-  background: #fff;
-  border-radius: 50px;
-  text-transform: uppercase;
-  -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  cursor: pointer;
-}
-
 #modal {
   position: fixed;
   left: 0;
   top: 0;
   width: 100%;
   height: 100vh;
-  z-index: 100000;
+  z-index: 1000;
   -webkit-transform: scale(0);
           transform: scale(0);
 }
@@ -427,18 +478,18 @@ a {
           justify-content: center;
 }
 
-#modal .modal-cont h2 {
+#modal .modal-bg .modal-cont h2 {
   font-weight: 700;
   font-size: 40px;
   margin-bottom: 10px;
 }
 
-#modal .modal-cont p {
+#modal .modal-bg .modal-cont p {
   font-weight: 300;
   line-height: 1.6;
 }
 
-#modal .modal-cont button {
+#modal .modal-bg .modal-cont button {
   float: right;
   border: 1px solid #fff;
   background: #fff;
@@ -454,7 +505,7 @@ a {
   transition: all 0.4s;
 }
 
-#modal .modal-cont button:hover {
+#modal .modal-bg .modal-cont button:hover {
   -webkit-box-shadow: 0 -50px 0 #000 inset;
           box-shadow: 0 -50px 0 #000 inset;
   color: #fff;
@@ -672,6 +723,7 @@ a {
 @media (max-width: 800px) {
   #contents h1 {
     font-size: 18vw;
+    margin-bottom: 0;
   }
   #nav ul {
     display: -webkit-box;
@@ -682,27 +734,28 @@ a {
     font-size: 12px;
     width: 60px;
     height: 30px;
-    line-height: 2.5;
+    line-height: 30px;
+  }
+  .info.right {
+    left: 0;
+    top: 9vh;
   }
   .info h1 {
-    font-size: 14px;
+    font-size: 18px;
   }
-  #modal {
-    position: absolute;
-    left: 0;
-    top: 0;
-  }
-  #modal .modal-cont {
-    padding: 20px;
-    height: 100vh;
-  }
-  #modal .modal-cont h2 {
-    font-size: 25px;
-    margin-bottom: 10px;
-  }
-  #modal .modal-cont p {
+  .info li a {
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
     font-size: 12px;
-    margin-bottom: 10px;
+    margin-bottom: 6px;
+    margin-left: 0px;
+  }
+  .info button {
+    width: 90px;
+    height: 25px;
+    font-size: 12px;
+    line-height: 16px;
   }
   .code-view {
     width: 90vw;
@@ -711,8 +764,9 @@ a {
     overflow: hidden;
   }
   .code-view .view-cont {
-    height: 55vh;
+    height: 56vh;
     overflow-y: scroll;
+    font-size: 12px;
   }
   .code-view .view-title li a {
     font-size: 14px;
@@ -1000,25 +1054,42 @@ a {
   cursor: pointer;
 }
 
+.source button:hover {
+  background: #fff;
+  color: #000;
+}
+
 @media (max-width: 800px) {
-  .parallax {
-    padding: 10px 15px;
-  }
   .parallax .paraInfo h1 {
-    font-size: 14px;
+    font-size: 18px;
   }
   .parallax .paraInfo p {
-    font-size: 11px;
+    font-size: 14px;
     line-height: 1.2;
   }
   .parallax .paraNav {
-    padding: 5px 10px;
+    padding: 10px 4px 10px 4px;
   }
-  .parallax .paraNav li a {
+  .parallax .paraNav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-line-pack: start;
+        align-content: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    overflow: hidden;
+  }
+  .parallax .paraNav ul li a {
     font-size: 12px;
-    width: 10px;
-    height: 10px;
-    line-height: 1.1;
+    width: 15px;
+    height: 15px;
+    line-height: 15px;
+    margin-left: 1px;
   }
   .parallax .paraInfo2 {
     font-size: 10px;
@@ -1030,6 +1101,6 @@ a {
   }
   .parallax .source button {
     right: 20px;
-    top: 60px;
+    top: 93.6%;
   }
 }
