--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -43,6 +43,69 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: "S-CoreDream";
+    font-weight: 100;
+    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-1Thin.woff") format("woff");
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "S-CoreDream";
+    font-weight: 200;
+    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-2ExtraLight.woff") format("woff");
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "S-CoreDream";
+    font-weight: 300;
+    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff") format("woff");
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "S-CoreDream";
+    font-weight: 400;
+    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-4Regular.woff") format("woff");
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "S-CoreDream";
+    font-weight: 500;
+    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-5Medium.woff") format("woff");
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "S-CoreDream";
+    font-weight: 600;
+    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-6Bold.woff") format("woff");
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "S-CoreDream";
+    font-weight: 700;
+    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-7ExtraBold.woff") format("woff");
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "S-CoreDream";
+    font-weight: 800;
+    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-8Heavy.woff") format("woff");
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "S-CoreDream";
+    font-weight: 900;
+    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-9Black.woff") format("woff");
+    font-style: normal;
+}
+
 // reset
 /* 여백 초기화 */
 body,
@@ -278,11 +341,16 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
 
     h1 {
         font-weight: 300;
-        font-size: 18px;
+        font-size: 20px;
         line-height: 1.6;
         border-bottom: 1px dashed #fff;
         display: inline-block;
         margin-bottom: 10px;
+        
+        a {
+            text-decoration: none;
+            color: #fff;
+        }
     }
     
     p{
@@ -300,12 +368,13 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
             color: #fff;
             border: 1px dashed #fff;
             border-radius: 50%;
-            width: 20px;
-            height: 20px;
-            line-height: 20px;
+            width: 30px;
+            height: 30px;
+            line-height: 30px;
             text-align: center;
-            font-size: 12px;
-            margin-bottom: 5px;
+            font-size: 14px;
+            margin-bottom: 10px;
+            margin-left: 4px;
         }
 
         &.active {
@@ -319,12 +388,14 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
     button {
         background: transparent;
         border: 1px solid #fff;
-        padding: 5px 20px;
+        padding: 4px 20px 5px;
         color: #fff;
         border-radius: 50px;
         box-shadow: 0 0 0 #fff inset;
         transition: all 0.4s;
         cursor: pointer;
+        width: 100px;
+        height: 40px;
 
         &:hover {
             box-shadow: 0 -50px 0 #fff inset;
@@ -333,24 +404,24 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
     }
 }
 
-.btn-wrap {
-    @include positionCenter;
-    display: none;
-    button {
-        border: 1px solid #fff;
-        padding: 5px 10px;
-        background: #fff;
-        border-radius: 50px;
-        text-transform: uppercase;
-        box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-        cursor: pointer;
-    }
-}
+// .btn-wrap {
+//     @include positionCenter;
+//     display: none;
+//     button {
+//         border: 1px solid #fff;
+//         padding: 5px 10px;
+//         background: #fff;
+//         border-radius: 50px;
+//         text-transform: uppercase;
+//         box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+//         cursor: pointer;
+//     }
+// }
 #modal {
     @include fixed;
     width: 100%;
     height: 100vh;
-    z-index: 100000;
+    z-index: 1000;
     transform: scale(0);
 
     .modal-bg {
@@ -359,37 +430,37 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
 		display: flex;
 		align-items: center;
 		justify-content: center;
-    }
 
-    .modal-cont {
+        .modal-cont {
 
-        h2 {
-            font-weight: 700;
-            font-size: 40px;
-            margin-bottom: 10px;
-        }
-
-        p {
-            font-weight: 300;
-            line-height: 1.6;
-        }
-
-        button {
-            float: right;
-            border: 1px solid #fff;
-            background: #fff;
-            border-radius: 20px;
-            color: #000;
-            padding: 5px 10px;
-            cursor: pointer;
-            margin-top: 15px;
-            font-family: $font-Nexon2;
-            box-shadow: 0 0 0 #000 inset;
-            transition: all 0.4s;
-
-            &:hover {
-                box-shadow: 0 -50px 0 #000 inset;
-                color: #fff;
+            h2 {
+                font-weight: 700;
+                font-size: 40px;
+                margin-bottom: 10px;
+            }
+    
+            p {
+                font-weight: 300;
+                line-height: 1.6;
+            }
+    
+            button {
+                float: right;
+                border: 1px solid #fff;
+                background: #fff;
+                border-radius: 20px;
+                color: #000;
+                padding: 5px 10px;
+                cursor: pointer;
+                margin-top: 15px;
+                font-family: $font-Nexon2;
+                box-shadow: 0 0 0 #000 inset;
+                transition: all 0.4s;
+    
+                &:hover {
+                    box-shadow: 0 -50px 0 #000 inset;
+                    color: #fff;
+                }
             }
         }
     }
@@ -506,6 +577,7 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
     #contents {
         h1 {
             font-size: 18vw;
+            margin-bottom: 0;
         }
     }
     #nav {
@@ -517,41 +589,43 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
                     font-size: 12px;
                     width: 60px;
                     height: 30px;
-                    line-height: 2.5;
+                    line-height: 30px;
                 }
             }
         }
     }
     .info {
+        &.right {
+            left: 0;
+            top: 9vh;
+        }
         h1 {
-            font-size: 14px;
+            font-size: 18px;
         }
-    }    
-    #modal {
-        position: absolute;
-        left: 0;
-        top: 0;
-        .modal-cont {
-            padding: 20px;
-            height: 100vh;
-            h2 {
-                font-size: 25px;
-                margin-bottom: 10px;
-            }
-            p {
-                font-size: 12px;
-                margin-bottom: 10px;
-            }
+        li a {
+            width: 20px;
+            height: 20px;
+            line-height: 20px;
+            font-size: 12px;
+            margin-bottom: 6px;
+            margin-left: 0px;
         }
-    }
+        button {
+            width: 90px;
+            height: 25px;
+            font-size: 12px;
+            line-height: 16px;
+        }
+    } 
     .code-view {
         width: 90vw;
         font-size: 14px;
         padding-bottom: 10px;
         overflow: hidden;
         .view-cont {
-            height: 55vh;
+            height: 56vh;
             overflow-y: scroll;
+            font-size: 12px;
         }
         .view-title {
             li {
@@ -771,34 +845,42 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
     transition: all 0.4s;
     cursor: pointer;
 
-    // &:hover {
-    //     color: #000;
-    // }
+    &:hover {
+        background: #fff;
+        color: #000;
+    }
 }
 
 @media (max-width: 800px){
     .parallax {
-        padding: 10px 15px;
 
         .paraInfo {
             h1 {
-                font-size: 14px;
+                font-size: 18px;
             }
             p {
-                font-size: 11px;
+                font-size: 14px;
                 line-height: 1.2;
             }
         }
         .paraNav {
-            padding: 5px 10px;
-            li {
-
-                a {
-                    font-size: 12px;
-                    width: 10px; height: 10px;
-                    line-height: 1.1;
+            padding: 10px 4px 10px 4px;
+            ul {
+                display: flex;
+                align-content: flex-start;
+                flex-direction: column;
+                flex-wrap: wrap;
+                overflow: hidden;
+                li {
+                    a {
+                        font-size: 12px;
+                        width: 15px; height: 15px;
+                        line-height: 15px;
+                        margin-left: 1px;
+                    }
                 }
             }
+            
         }
         .paraInfo2 {
             font-size: 10px;
@@ -810,7 +892,7 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
         }
         .source button {
             right: 20px;
-            top: 60px;
+            top: 93.6%;
         }   
     }
 }
