--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -106,6 +106,71 @@
     font-style: normal;
 }
 
+/* 에스코어 드림 - 9개 */
+
+@font-face {
+    font-family: 'S-CoreDream';
+    font-weight: 100;
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-1Thin.woff') format('woff');
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'S-CoreDream';
+    font-weight: 200;
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-2ExtraLight.woff') format('woff');
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'S-CoreDream';
+    font-weight: 300;
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff') format('woff');
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'S-CoreDream';
+    font-weight: 400;
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-4Regular.woff') format('woff');
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'S-CoreDream';
+    font-weight: 500;
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-5Medium.woff') format('woff');
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'S-CoreDream';
+    font-weight: 600;
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-6Bold.woff') format('woff');
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'S-CoreDream';
+    font-weight: 700;
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-7ExtraBold.woff') format('woff');
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'S-CoreDream';
+    font-weight: 800;
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-8Heavy.woff') format('woff');
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'S-CoreDream';
+    font-weight: 900;
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-9Black.woff') format('woff');
+    font-style: normal;
+}
+
 // reset
 /* 여백 초기화 */
 body,
@@ -213,14 +278,15 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
         background: rgba(0, 0, 0, 0.5);
         z-index: -1;
     }
-}
 
-@for $i from 1 through 10 {
-    .bg#{$i} {
-        background-image: url(../img/bg#{$i}@2.jpg);
+    &.blue {
+        &::before {
+            background-color: #41088b59;
+        }
     }
 }
-@for $i from 11 through 20 {
+
+@for $i from 1 through 30 {
     .bg#{$i} {
         background-image: url(../img/bg#{$i}@2.jpg);
     }
@@ -339,6 +405,12 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
         right: 0;
     }
 
+    &.left {
+        top: auto;
+        left: 0;
+        bottom: 0;
+    }
+
     h1 {
         font-weight: 300;
         font-size: 20px;
@@ -382,6 +454,20 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
                 background: #fff;
                 color: #000;
             }
+        }
+    }
+
+    &.list {
+        background: rgba(0,0,0,0.4);
+        color: #fff;
+        padding: 20px;
+        font-size: 12px;
+        line-height: 1.8;
+        border-radius: 10px;
+        margin: 20px;
+
+        li {
+            display: block;
         }
     }
     
