--- a/site-php/assets/css/reset.css
+++ b/site-php/assets/css/reset.css
@@ -31,7 +31,8 @@ button,
 figure,
 figcaption {
     margin: 0;
-    padding: 0
+    padding: 0;
+    box-sizing: border-box;
 }
 
 /* 폰트 초기화 네이버*/
@@ -50,13 +51,13 @@ textarea {
 /* 링크 초기화 */
 a {
     color: #222;
-    text-decoration: none
+    text-decoration: none;
 }
 
 /* 목록 초기화 */
 ol,
 ul {
-    list-style: none
+    list-style: none;
 }
 
 /* 스타일 초기화 */
@@ -69,6 +70,49 @@ em {
 
 img {
     width: 100%;
+}
+
+/* 제목 초기화 */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: normal;
+}
+
+/* 리스트 스타일 유형 */
+ul.list li,
+ol.list li,
+dl.list li {
+    position: relative;
+    padding-left: 10px;
+}
+ul.list li::before,
+ol.list li::before,
+dl.list li::before {
+    content: '';
+    width: 3px; height: 3px;
+    background: #000;
+    position: absolute;
+    left: 0; top: 7px;
+}
+ul.list2 li,
+ol.list2 li,
+dl.list2 li {
+    position: relative;
+    padding-left: 15px;
+}
+ul.list2 li::before,
+ol.list2 li::before,
+dl.list2 li::before {
+    content: '';
+    width: 7px; height: 7px;
+    background: #000;
+    position: absolute;
+    border-radius: 50%;
+    left: 0; top: 7px;
 }
 
 /* 이미지 표현 방법 */
